--- a/style.css
+++ b/style.css
@@ -1,11 +1,93 @@
-a{ 
-	color:black;
-	text-decoration:none;
+/*Стили шапки*/
+.textsh{
+	margin:0px auto;
+	width:300px;
+	overflow:hidden;
+	font-size:17px;
+	color:#555;
+	background:rgba(255,255,255,0.6);
+	border:solid 1px #aaa;
+	border-radius:20px;
+	text-align:center;
+	cursor: pointer;
 }
-.text{margin:0px auto; width:300px; overflow:hidden; font-size:17px; color:black; background:rgba(255,255,255,0.6); border:solid 1px #aaa; border-radius:20px; text-align:center;}
-#outer_container{margin:0px; margin-left:-10px; width:101%; height:110px; padding:0 5px;}
-#thumbScroller{position:relative; overflow:hidden;}
-#thumbScroller .container{position:relative; left:0;}
-#thumbScroller .content{float:left;}
-#thumbScroller .content div{margin:10px; height:100%; margin-left:20px; font-family:Verdana, Geneva, sans-serif; font-size:13px;}
-#thumbScroller img{border:solid 1px #aaa; border-radius:100px; height:100px; width:100px;}
+.textsh:hover{
+	margin:0px auto;
+	width:300px;
+	overflow:hidden;
+	font-size:17px;
+	color:#555;
+	background:white;
+	border:solid 1px #aaa;
+	border-radius:20px;
+	text-align:center;
+	cursor: pointer;
+}
+#outer_container{
+	margin:0px;
+	margin-left:-10px;
+	width:101%;
+	height:110px;
+	padding:0 5px;
+}
+#thumbScroller{
+	position:relative;
+	left:-5;
+	overflow:hidden;
+}
+#thumbScroller .container{
+	position:relative;
+	left:0;
+}
+#thumbScroller .content{
+	float:left;
+}
+#thumbScroller .content div{
+	margin:10px;
+	height:100%; 
+	margin-left:20px; 
+	font-family:Verdana, Geneva, sans-serif; 
+	font-size:13px;
+}
+#thumbScroller img{
+	border:solid 1px #aaa; 
+	border-radius:100px; 
+	height:100px; 
+	width:100px;
+}
+/*Конец стилей шапки*/
+/*Стили Сатука Кости */
+.el{ 
+	font-family: "Segoe UI", "Helvetica Neue", Helvetica, sans-serif;
+	position: relative;
+	width: 60%;
+	overflow: hidden;
+	background: #ffffff;
+	margin: 0 auto;
+	margin-top: 20px;
+	border: solid 1px #cccccc;
+	border-radius:10px; 
+	-webkit-border-radius:10px; 
+	-moz-border-radius:10px; 
+	-khtml-border-radius: 10px;
+	}
+.newim{
+	width: 400;
+	height: 300;
+	margin-left: 0;
+	float: left;
+	padding-right: 25;
+	}
+.zagolovokn{
+	font-family: "Segoe UI", "Helvetica Neue", Helvetica, Tahoma, Arial;
+	font-size: 30px;
+	font-weight:bold;
+	text-align: left;
+	line-height: 1.2;
+	color: black;
+	padding-right: 25px;
+	margin-bottom: 0;
+	margin-top: -15;
+	float:bottom;
+	} 
+/* Конец стилей Салтука Кости */
