--- a/style.css
+++ b/style.css
@@ -163,3 +163,94 @@ h1.lipatkin{
 
 /* Конец стилей Липаткин Артёма */
 
+/* Начало стилей Биндера Сергея */
+
+body.binder {
+    background: #606060;
+    padding: 6px;
+    border: 1px solid #333;
+    font-size: 25pt;
+    font-family: tahoma;
+    color: white;
+    text-shadow: blue 1px 0px, blue 1px 1px, blue 0px 1px, blue -1px 1px, blue -1px 0px, blue -1px -1px, blue 0px -1px, blue 1px -1px;
+    line-height: 1em;
+    word-wrap: break-word;
+    height: auto;
+    text-indent: 1em;
+    padding: 6px;
+}
+
+h1.binder, h2.binder, h3.binder {
+    text-indent: 0px;
+    text-align: center;
+}
+
+h1.binder {
+    padding: 2px;
+    margin: 2px;
+    line-height: 1em;
+}
+h2.binder {
+    font-size: 45pt;
+    text-shadow: black 3px 3px;
+}
+h3.binder {
+    font-size: 35pt;
+}
+.sl1_binder {
+    font-size: 20pt;
+    padding: inherit;
+    margin: 0;
+    text-indent: 1em;
+}
+div.remark_binder {
+    padding: 0.5em;
+    text-indent: 1em;
+    margin: 0px;
+    font-style: italic;
+    font-family: lucida;
+}
+div.quote_binder {
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    font-size: 22pt;
+    font-family: verdana;
+    padding: 1em;
+}
+img.binder {
+    border: solid 2px black;
+    background-color: white;
+}
+table.map_binder {
+    font-size: 40pt;
+    vertical-align: top;
+    width: 100%;
+}
+img.logo_binder {
+    text-indent: 0px;
+    background-color: inherit;
+    width: 50%;
+    border: none;
+}
+p.mapdet_binder {
+    font-size: 18pt;
+    padding: 3em;
+    padding-top: 1px;
+    padding-bottom: 3px;
+    color: yellow;
+}
+
+
+a.binder {
+    color: inherit;
+    text-shadow: red 1px 0px, red 1px 1px, red 0px 1px, red -1px 1px, red -1px 0px, red -1px -1px, red 0px -1px, red 1px -1px;
+}
+a.binder:hover {
+    text-shadow: black 1px 0px, black 1px 1px, black 0px 1px, black -1px 1px, black -1px 0px, black -1px -1px, black 0px -1px, black 1px -1px;
+}
+center.binder {
+    text-indent: 0px;
+}
+
+/* Конец стилей Биндера Сергея */
