--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@
 /* Начало стилей Липаткина Артёма */
 
 body.lipatkin{
-	background: url("images/lipatkin_background3.png") ;
+	background: url("images/fon.jpg") ;
 	background-attachment: fixed;
 	/*background-color: #40E0D0;*/
 	font-family: Georgia, Arial, Verdana, sans-serif;
